// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading dynamic color 1`] = `
<h3
  class="sc-dkzDqf dbysmQ"
  color="deeppink"
  scale="300"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 1`] = `
<h3
  class="sc-dkzDqf gGQvWN"
  scale="100"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 2`] = `
<h3
  class="sc-dkzDqf gGQIxi"
  scale="200"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 3`] = `
<h3
  class="sc-dkzDqf gGPVvb"
  scale="300"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 4`] = `
<h3
  class="sc-dkzDqf gGSgVM"
  scale="400"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 5`] = `
<h3
  class="sc-dkzDqf gGRtTF"
  scale="500"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 6`] = `
<h3
  class="sc-dkzDqf gGRGua"
  scale="600"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 7`] = `
<h3
  class="sc-dkzDqf gGQTrT"
  scale="700"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 8`] = `
<h3
  class="sc-dkzDqf gGTlfQ"
  scale="800"
>
  Heller UI
</h3>
`;

exports[`Heading h1 - h6 snapshots 1`] = `
<h1
  class="sc-bczRLJ eqPlRr"
  scale="300"
>
  Heller UI
</h1>
`;

exports[`Heading h1 - h6 snapshots 2`] = `
<h2
  class="sc-gsnTZi krRSEC"
  scale="300"
>
  Heller UI
</h2>
`;

exports[`Heading h1 - h6 snapshots 3`] = `
<h3
  class="sc-dkzDqf gGPVvb"
  scale="300"
>
  Heller UI
</h3>
`;

exports[`Heading h1 - h6 snapshots 4`] = `
<h4
  class="sc-hKMtZM kNumkD"
  scale="300"
>
  Heller UI
</h4>
`;

exports[`Heading h1 - h6 snapshots 5`] = `
<h5
  class="sc-eCYdqJ eSiTaG"
  scale="300"
>
  Heller UI
</h5>
`;

exports[`Heading h1 - h6 snapshots 6`] = `
<h6
  class="sc-jSMfEi dSMsvX"
  scale="300"
>
  Heller UI
</h6>
`;
